# libxc

./: .gitlab-ci.yml  CMakeLists.txt  ChangeLog.md  README.md  configure.ac  libxc.bib
testsuite/: CMakeLists.txt  Makefile.am  test_densities.py  xc-generate_tests.py  xc-get_data.c  xc-reset_regression.py  xc-run_testsuite.py  xc_reset_regression.py
testsuite/regression/gga_c/: test_gga_c_acgga_BrOH.py  test_gga_c_acgga_BrOH_cation.py  test_gga_c_acgga_BrOH_cation_restr.py  test_gga_c_acgga_H.py  test_gga_c_acgga_H_restr.py  test_gga_c_acgga_Li.py  test_gga_c_acgga_Li_restr.py  test_gga_c_acggap_BrOH.py  test_gga_c_acggap_BrOH_cation.py  test_gga_c_acggap_BrOH_cation_restr.py  test_gga_c_acggap_H.py  test_gga_c_acggap_H_restr.py  test_gga_c_acggap_Li.py  test_gga_c_acggap_Li_restr.py  test_gga_c_am05_BrOH.py  test_gga_c_am05_BrOH_cation.py  test_gga_c_am05_BrOH_cation_restr.py  test_gga_c_am05_H.py  test_gga_c_am05_H_restr.py  test_gga_c_am05_Li.py  test_gga_c_am05_Li_restr.py  test_gga_c_apbe_BrOH.py  test_gga_c_apbe_BrOH_cation.py  test_gga_c_apbe_BrOH_cation_restr.py  test_gga_c_apbe_H.py  test_gga_c_apbe_H_restr.py  test_gga_c_apbe_Li.py  test_gga_c_apbe_Li_restr.py  test_gga_c_bmk_BrOH.py  test_gga_c_bmk_BrOH_cation.py  test_gga_c_bmk_BrOH_cation_restr.py  test_gga_c_bmk_H.py  test_gga_c_bmk_H_restr.py  test_gga_c_bmk_Li.py  test_gga_c_bmk_Li_restr.py  test_gga_c_ccdf_BrOH.py  test_gga_c_ccdf_BrOH_cation.py  test_gga_c_ccdf_BrOH_cation_restr.py  test_gga_c_ccdf_H.py  test_gga_c_ccdf_H_restr.py  (+408 more)
testsuite/regression/gga_k/: test_gga_k_absp1_BrOH.py  test_gga_k_absp1_BrOH_cation.py  test_gga_k_absp1_BrOH_cation_restr.py  test_gga_k_absp1_H.py  test_gga_k_absp1_H_restr.py  test_gga_k_absp1_Li.py  test_gga_k_absp1_Li_restr.py  test_gga_k_absp2_BrOH.py  test_gga_k_absp2_BrOH_cation.py  test_gga_k_absp2_BrOH_cation_restr.py  test_gga_k_absp2_H.py  test_gga_k_absp2_H_restr.py  test_gga_k_absp2_Li.py  test_gga_k_absp2_Li_restr.py  test_gga_k_absp3_BrOH.py  test_gga_k_absp3_BrOH_cation.py  test_gga_k_absp3_BrOH_cation_restr.py  test_gga_k_absp3_H.py  test_gga_k_absp3_H_restr.py  test_gga_k_absp3_Li.py  test_gga_k_absp3_Li_restr.py  test_gga_k_absp4_BrOH.py  test_gga_k_absp4_BrOH_cation.py  test_gga_k_absp4_BrOH_cation_restr.py  test_gga_k_absp4_H.py  test_gga_k_absp4_H_restr.py  test_gga_k_absp4_Li.py  test_gga_k_absp4_Li_restr.py  test_gga_k_apbe_BrOH.py  test_gga_k_apbe_BrOH_cation.py  test_gga_k_apbe_BrOH_cation_restr.py  test_gga_k_apbe_H.py  test_gga_k_apbe_H_restr.py  test_gga_k_apbe_Li.py  test_gga_k_apbe_Li_restr.py  test_gga_k_apbeint_BrOH.py  test_gga_k_apbeint_BrOH_cation.py  test_gga_k_apbeint_BrOH_cation_restr.py  test_gga_k_apbeint_H.py  test_gga_k_apbeint_H_restr.py  (+317 more)
testsuite/regression/gga_x/: test_gga_x_2d_b86_BrOH.py  test_gga_x_2d_b86_BrOH_cation.py  test_gga_x_2d_b86_BrOH_cation_restr.py  test_gga_x_2d_b86_H.py  test_gga_x_2d_b86_H_restr.py  test_gga_x_2d_b86_Li.py  test_gga_x_2d_b86_Li_restr.py  test_gga_x_2d_b86_mgc_BrOH.py  (+748 more)
(+3240 files in other folders)
